--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,8 @@
 # feature for the data you need to update frequently.
 #
 # For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
+# 'bundle exec jekyll serve'. If you change this file, please restart the server
+# process.
 
 # Site settings
 # These are used to personalize your new site. If you look in the HTML files,
@@ -42,3 +43,12 @@ plugins:
 #   - vendor/ruby/
 
 permalink: pretty
+
+header_pages:
+  - about.md
+  - scheme-tutorial.md
+
+# Uncomment the `disqus` section to enable discussion
+# Set `JEKYLL_ENV=production` environment variable locally to enable it.
+# disqus:
+#    shortname: lambda-calculus
